--- a/package.json
+++ b/package.json
@@ -2,27 +2,23 @@
   "name": "node-ts-gql-poc",
   "version": "0.0.1",
   "description": "Node/Typescript/GraphQL Proof-of-Concept",
-  "keywords": [
-    "node",
-    "typescript",
-    "graphql"
-  ],
+  "keywords": ["node", "typescript", "graphql"],
   "author": "Anurag Mishra <anurag.mishra@jykra.com>",
   "license": "UNLICENSED",
   "dependencies": {
     "graphql-yoga": "^1.7.1",
     "pg": "^7.4.1",
-    "reflect-metadata": "^0.1.12",
-    "typeorm": "^0.1.20"
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.1.20"
   },
   "devDependencies": {
-    "@types/node": "^9.6.1",
+    "@types/node": "^8.0.29",
     "@types/ws": "^4.0.2",
     "nodemon": "^1.17.3",
-    "ts-node": "^5.0.1",
+    "ts-node": "3.3.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
-    "typescript": "^2.8.1"
+    "typescript": "2.5.2"
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/index.ts"
