--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,11 @@
     "experimentalDecorators": true,
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
     "pretty": true,
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
-    "noImplicitAny": false
+    "strictPropertyInitialization": true
   }
 }
