Added JWT Authentication

--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "keywords": [
     "node",
     "typescript",
-    "graphql"
+    "graphql",
+    "typeorm"
   ],
   "author": "Anurag Mishra <anurag.mishra@jykra.com>",
   "license": "UNLICENSED",
   "dependencies": {
+    "@types/jsonwebtoken": "^7.2.6",
+    "bcrypt": "^2.0.0",
+    "dotenv": "^5.0.1",
     "graphql-import": "^0.5.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-yoga": "^1.7.1",
+    "jsonwebtoken": "^8.2.1",
     "pg": "^7.4.1",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.1.20"
   },
   "devDependencies": {
+    "@types/bcrypt": "^1.0.0",
+    "@types/dotenv": "^4.0.3",
     "@types/node": "^8.0.29",
     "@types/ws": "^4.0.2",
     "nodemon": "^1.17.3",
